bat.bool1.parottrouble.ParotTrouble.scala.error
Erreur de compilation :
ParotTrouble:1: error: not found: value flase
def parotTrouble(talking:Boolean, hour:Int):Boolean = {if (talking&&(hour<7) ||talking&& (hour>20)){return true}; else {return flase}
                                                                                                                               ^